# boogie-stats

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  bandit.yml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
boogiestats/: manage.py
boogiestats/boogie_api/: admin.py  apps.py  auth_backend.py  choices.py  managers.py  metrics.py  models.py  urls.py  utils.py  v1.py  views.py
boogiestats/boogie_api/migrations/: 0001_initial.py  0002_player_user.py  0003_auto_20220522_1934.py  0004_alter_player_rivals.py  0005_player_name.py  0006_alter_player_rivals.py  0007_song_gs_ranked.py  0008_song_highscore.py  0009_alter_score_comment_alter_song_highscore.py  0010_remove_score_profile_name_score_decents_and_more.py  0011_player_latest_score.py  0012_alter_score_is_top_alter_score_score_and_more.py  0013_score_submission_day.py  0014_player_join_date.py  0015_player_pull_gs_name_and_tag.py  0016_song_number_of_players_song_number_of_scores.py  0017_player_leaderboard_source.py  0018_rename_is_top_score_is_itg_top_and_more.py  0019_score_ex_score_score_is_ex_top_song_ex_highscore_and_more.py  0020_alter_player_leaderboard_source.py  0021_alter_player_leaderboard_source.py  0022_player_num_scores.py  0023_alter_player_machine_tag_alter_player_name.py  0024_player_five_stars_player_four_stars_player_one_star_and_more.py  0025_player_num_songs.py  0026_player_bluesky_handle_player_bokutachi_handle_and_more.py  0027_player_gs_integration_score_gs_status_and_more.py  0028_alter_player_gs_integration_and_more.py
boogiestats/boogie_api/test/: test_api.py  test_models.py
boogiestats/boogie_ui/: apps.py  context_processors.py  forms.py  urls.py  views.py
boogiestats/boogie_ui/templatetags/: boogiestats_tags.py
boogiestats/boogie_ui/test/: test_ui.py
boogiestats/boogiestats/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
boogiestats/static/boogie_ui/: boogiestats.css  boogiestats.js
dev/: check-pending-migrations.sh  populate-db.py
docker/: Dockerfile  entrypoint.sh  populate-redis.py
docs/: dev_manual.md  user_manual.md
prod/: grafana-agent-config.yaml.example  settings.py
(+33 files in other folders)
