[tool.black]
line-length = 120

[tool.poetry]
name = "boogie-stats"
version = "0.1.0"
description = "A pass-through proxy for groovestats.com that records non-ranked song scores"
authors = ["Rafał Florczak <florczak.raf+boogiestats@gmail.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [
    { include = "boogiestats" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
requests = "^2.26.0"
gunicorn = "^22.0.0"
django-mathfilters = "^1.0.0"
redis = "^4.5.1"
sentry-sdk = "^1.12"
django-bootstrap-icons = "0.8.7"
django-prometheus = "^2.3.1"
prometheus-client = "0.18.0"
django-ipware = "^5.0.2"
django-formset = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-django = "^4.8.0"
black = "23.3.0"
requests-mock = "^1.12.1"
flake8 = "^6.0.0"
djlint = "1.23.3"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
