[tool.black]
line-length = 120

[project]
name = "boogie-stats"
version = "0.1.0"
description = "A pass-through proxy for groovestats.com that records non-ranked song scores"
authors = [
    {name = "Rafał Florczak", email="florczak.raf+boogiestats@gmail.com"}
]
license = "AGPLv3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django (~=5.1)",
    "requests (~=2.32)",
    "gunicorn (~=23.0)",
    "django-mathfilters (~=1.0)",
    "redis (~=5.2)",
    "sentry-sdk (~=2.22)",
    "django-bootstrap-icons (==0.9.0)",
    "django-prometheus (~=2.3)",
    "prometheus-client (~=0.21)",
    "django-ipware (~=7.0)",
    "django-formset (~=1.6)",
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "boogiestats" },
]

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
black = "24.10.0"
requests-mock = "^1.12.1"
flake8 = "^7.1.1"
djlint = "1.36.4"
bandit = "^1.8.2"
pre-commit = "^4.1.0"
pre-commit-hooks = "^5.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
